--- a/src/index.css
+++ b/src/index.css
@@ -144,3 +144,72 @@
 html {
   scroll-behavior: smooth;
 }
+
+/* .loader {
+  font-size: 48px;
+  color: #fff;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  position: relative;
+}
+.loader:before {
+  content: "";
+  animation: 3s print linear forwards;
+}
+.loader:after {
+  content: "";
+  position: absolute;
+  right: -6px;
+  top: 50%;
+  transform: translateY(-45%);
+  width: 2px;
+  height: 1.3em;
+  background: currentColor;
+  opacity: 0.8;
+  animation: 1s blink steps(2) infinite;
+}
+
+@keyframes blink {
+  0% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: visible;
+  }
+}
+@keyframes print {
+  0% {
+    content: "N";
+  }
+  10% {
+    content: "NG";
+  }
+  20% {
+    content: "NGl";
+  }
+  30% {
+    content: "NGlob";
+  }
+  40% {
+    content: "NGlo";
+  }
+  50% {
+    content: "NGlob";
+  }
+  60% {
+    content: "NGlo";
+  }
+  70% {
+    content: "NGl";
+  }
+  80% {
+    content: "NG";
+  }
+  90% {
+    content: "N";
+  }
+  100% {
+    content: "NGlobal";
+  }
+} */
